2005-11-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Handle format == None, for all converters.

	* setup.py (version): 
	* MANIFEST.in: 
	Install & include AUTHORS NEWS README in the tarball
	Do not include .pyc files in the tarball
	
=== kiwi 1.9.2 ===
2005-11-21  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Added
	* kiwi/__version__.py: Bump
	
2005-11-21  Johan Dahlin  <jdahlin@async.com.br>

	* examples/tasklet/simple.py:
	* examples/tasklet/test-tasklet.py:
	* examples/tasklet/test-tasklet2.py:
	* kiwi/tasklet.py:
	Add gtasklet from Gustavo Carneiro.

2005-11-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/controllers.py:
	* kiwi/datatypes.py:
	* kiwi/decorators.py:
	* kiwi/dist.py:
	* kiwi/environ.py:
	* kiwi/i18n/__init__.py:
	* kiwi/i18n/i18n.py:
	* kiwi/interfaces.py:
	* kiwi/models.py:
	* kiwi/python.py:
	* kiwi/ui/__init__.py:
	* kiwi/ui/gadgets.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/utils.py:

	Add docstrings
	
	* tools/epyrun:
	Helper for running epydoc

2005-11-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py:
	Add cache property to column useful when using accessors which
	can be expensive to compute.

2005-11-15  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/widgets/list.py (List._load): Catch StopIteration, in case
	we have an empty list.

2005-11-14  Gustavo Sverzut Barbieri <barbieri@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	Do not use get_name for getting the name of objects, since it's only
	present for GtkWidgets, instead use get_data('gazpacho::object-id'),
	which is set on all objects. Fixes #2231.

2005-11-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (SummaryLabel.update_total): Remove
	erroneousness show.
	(ListLabel.set_value): Rename from set_text

2005-11-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (ListLabel):
	Add a new label, (actually an hbox), which can be put under or on